# daex

./: LICENSE  LICENSE.3rdparty  README.md  pyproject.toml
example/: README.md  example1.py
src/daex/: __init__.py  semi_explicit.py  utils.py
